--- a/android/.classpath
+++ b/android/.classpath
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="android/src"/>
+	<classpathentry kind="src" path="android/build/.apt_generated"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Android/platforms/android-11/android.jar"/>
-	<classpathentry kind="lib" path="/Users/digital/Library/Application Support/Titanium/mobilesdk/osx/3.1.3.GA/android/titanium.jar"/>
-	<classpathentry kind="lib" path="/Users/digital/Library/Application Support/Titanium/mobilesdk/osx/3.1.3.GA/android/modules/titanium-ui.jar"/>
-	<classpathentry kind="lib" path="/Users/digital/Library/Application Support/Titanium/mobilesdk/osx/3.1.3.GA/android/kroll-common.jar"/>
-	<classpathentry kind="lib" path="/Users/digital/Library/Application Support/Titanium/mobilesdk/osx/3.1.3.GA/android/kroll-apt.jar"/>
-	<classpathentry kind="lib" path="lib/tween-engine-api.jar"/>
-	<classpathentry kind="src" path=".apt_generated">
-		<attributes>
-			<attribute name="optional" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/Users/garyscrook/Android SDK/platforms/android-23/android.jar"/>
+	<classpathentry kind="lib" path="/Applications/Appcelerator Studio/AppceleratorStudio.app/Contents/MacOS/q/mobilesdk/osx/6.1.1.GA/android/titanium.jar"/>
+	<classpathentry kind="lib" path="/Applications/Appcelerator Studio/AppceleratorStudio.app/Contents/MacOS/q/mobilesdk/osx/6.1.1.GA/android/kroll-common.jar"/>
+	<classpathentry kind="lib" path="/Applications/Appcelerator Studio/AppceleratorStudio.app/Contents/MacOS/q/mobilesdk/osx/6.1.1.GA/android/kroll-apt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
